--- a/_posts/2025-3-25-教程篇 | 遥感图像分割.md
+++ b/_posts/2025-3-25-教程篇 | 遥感图像分割.md
@@ -8,7 +8,7 @@
 
 本章大致介绍一下基本流程，如图所示：
 
-![基本流程](https://files.mdnice.com/user/52981/d6dda3b1-fa61-49c8-97be-450833d45ed2.png)
+![基本流程](https://bucket-xuxing-blog.oss-cn-hangzhou.aliyuncs.com/apple-touch-icon.png)
 
 
 # 1.数据集准备
